# My_first_NDK1

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myndk1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_example_myndk1_MainActivity.h  native-lib.cpp
app/src/main/java/com/example/myndk1/: MainActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
